2009-10-13  Juri Linkov  <juri@jurta.org>

	* files-x.el (read-file-local-variable-value): Don't filter out
	minor modes from mode name completion (bug#4664).

2009-10-13  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-cmds.el (ucs-names): Remove exclusion of
	"Enclosed Ideographic Supplement" range (U+1F200..U+1F2FF).

2009-10-13  Kenichi Handa  <handa@m17n.org>

	* international/uni-name.el: Regenerated.

2009-10-13  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs-mode): Fix last change.  (`revert-buffer-function'
	should be automatically buffer-local, but isn't.)

2009-10-12  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-next-error-function): Fix the
	timestamps if the buffer has been visited before.

	(compilation-mode-font-lock-keywords): Do not prepend "^ *" to
	non-anchored patterns, like the perl one (bug#3928).

2009-10-12  Glenn Morris  <rgm@gnu.org>

	* net/tramp-smb.el (tramp-smb-do-file-attributes-with-stat):
	Let-bind `size'.

2009-10-12  Juanma Barranquero  <lekktu@gmail.com>

	* proced.el (proced-unload-function): New function.

	* bs.el (bs-mode): Set `revert-buffer-function' to `bs-refresh'.
	(bs-refresh): Add IGNORED arg for `revert-buffer' compatibility.
	Doc fix.

	* menu-bar.el (menu-bar-file-menu): Fix format of `separator-exit' item.

2009-10-11  Juri Linkov  <juri@jurta.org>

	* files-x.el (read-file-local-variable-value):
	Provide default value only for bound variables (bug#4664).

2009-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-local-host-p): Function shall return nil for
	connection methods like smb.

	* net/tramp-cache.el (tramp-flush-connection-property): The hash
	can be empty.

	* net/tramp-smb.el (tramp-smb-errors): Add error messages.
	(tramp-smb-file-name-handler-alist): Add handlers for
	`add-name-to-file', `make-symbolic-link'.
	(tramp-smb-handle-add-name-to-file)
	(tramp-smb-do-file-attributes-with-stat)
	(tramp-smb-handle-make-symbolic-link)